fixed some layout problems

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -70,3 +70,7 @@
   background-position: center;
   background-size: cover;
 }
+
+.form-card {
+  color: #382702;
+}
