--- a/app/assets/stylesheets/pages/_pages.scss
+++ b/app/assets/stylesheets/pages/_pages.scss
@@ -1,6 +1,6 @@
 .pages {
   width: 100%;
-  background-color: rgba(215, 233, 244, 0.8);
+  background-color: rgba(215, 233, 244, 0.6);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   padding: 20px;
